<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动洗车</string>
    <string name="auth">cqust @daidong</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="forget_password">忘记密码？</string>
    <string name="or">or</string>
    <string name="register">注  册</string>
    <string name="login">登  录</string>
    <string name="account">手机号码</string>
    <string name="password">密码</string>
    <string name="repsw">确认密码</string>
    <string name="record">洗车记录</string>
    <string name="set">设置</string>
    <string name="car">汽车信息</string>
    <string name="send">发  送</string>
    <string name="time">2014.12.15</string>
    <string name="explain">补充说明..</string>
    <string name="back">返回</string>
    <string name="person">个人信息</string>
    <string name="person_name">姓名</string>
    <string name="person_sex">性别</string>
    <string name="person_phone">手机</string>
    <string name="person_address">地址</string>
    <string name="person_head">头像</string>
    <string name="person_credit_id">身份证</string>
    <string name="edit">编辑资料</string>
    <string name="editcar">编辑汽车信息</string>
    <string name="redirect">已有帐号？直接</string>
    <string name="complete_person">完善资料</string>
    <string name="finish">完成</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="msg_notice">新消息提醒</string>
    <string name="exit">退出</string>
    <string name="receive_msg">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="take_photo">拍照</string>
    <string name="alume">从相册中选取</string>
    <string name="cancel">取消</string>
    <string name="car_brand">品牌</string>
    <string name="car_type">型号</string>
    <string name="car_number">车牌</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_complete_person">CompletePersonActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_add_car">AddCarActivity</string>

</resources>