<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/time_line_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_line_1"
        android:layout_marginLeft="15dp"
        android:text="@string/time" />

    <ImageView
        android:id="@+id/time_line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/time_line_time"
        android:contentDescription="@string/app_name"
        android:src="@drawable/time_line_1" />

    <TextView
        android:id="@+id/time_line_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_line_time"
        android:layout_toLeftOf="@+id/time_line_1"
        android:text="@string/account" />

    <TextView
        android:id="@+id/time_line_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_line_time"
        android:layout_centerHorizontal="true"
        android:text="@string/account" />

</RelativeLayout>