<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SetActivity" >

    <RelativeLayout
        android:id="@+id/set_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/top" >

        <Button
            android:id="@+id/set_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/back"
            android:text="@string/set"
            android:textColor="@drawable/font_selector" />
    </RelativeLayout>

    <TextView
        android:id="@+id/set_msg_notice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/set_top"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/set"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/guide_margin"
        android:text="@string/msg_notice" />

    <TextView
        android:id="@+id/set_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/set_msg_notice"
        android:background="@drawable/set_bottom"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/guide_margin"
        android:text="@string/exit" />

</RelativeLayout>