<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideActivity" >

    <ImageView
        android:id="@+id/iv_guide_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/guide_margin"
        android:layout_marginLeft="@dimen/guide_margin"
        android:layout_marginRight="@dimen/guide_margin"
        android:orientation="horizontal" >

        <com.dd.bootstrap.BootstrapButton
            android:id="@+id/guide_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/guide_margin"
            android:layout_weight="1.5"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="15.0sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="success" />

        <com.dd.bootstrap.BootstrapButton
            android:id="@+id/guide_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15.0sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="warning" />
    </LinearLayout>

</RelativeLayout>