<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AddCarActivity" >

    <RelativeLayout
        android:id="@+id/add_car_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/top" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/editcar"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/add_car_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentRight="true"
            android:text="@string/finish"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_car_brand"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/add_car_top"
        android:layout_marginTop="@dimen/actionbar_height"
        android:background="@drawable/person" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/usual_margin_left"
            android:text="@string/car_brand" />

        <TextView
            android:id="@+id/add_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/usual_margin_left" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_car_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/add_car_brand"
        android:background="@drawable/person" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/usual_margin_left"
            android:text="@string/car_type" />

        <EditText
            android:id="@+id/add_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_car_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/add_car_type"
        android:background="@drawable/person" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/usual_margin_left"
            android:text="@string/car_number" />

        <EditText
            android:id="@+id/add_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="text" />
    </RelativeLayout>

</RelativeLayout>