<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".NoticeActivity" >

    <RelativeLayout
        android:id="@+id/notice_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/top" >

        <Button
            android:id="@+id/notice_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/back"
            android:text="@string/msg_notice"
            android:textColor="@drawable/font_selector" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notice_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/notice_top"
        android:layout_marginTop="@dimen/actionbar_height"
        android:background="@drawable/set" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/receive_msg" />

        <com.dd.widget.CheckSwitchButton
            android:id="@+id/notice_recevier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notice_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/notice_1"
        android:background="@drawable/set" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/voice" />

        <com.dd.widget.CheckSwitchButton
            android:id="@+id/notice_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notice_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_below="@+id/notice_2"
        android:background="@drawable/set_bottom" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/shake" />

        <com.dd.widget.CheckSwitchButton
            android:id="@+id/notice_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true" />
    </RelativeLayout>

</RelativeLayout>